fixed spacing issue with some p elements

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -52,6 +52,7 @@ p {
   font-size: 16px;
   line-height: 22px;
   padding: 8px 0;
+  width: 100%;
 }
 
 ul {
